# weather_station_bridge

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
inc/: Bridge.hpp  Message.hpp
src/: Bridge.cpp  Message.cpp  main.cpp
